package x1.proto.pb;

option java_package = "x1.proto.pb";

option java_outer_classname = "BeanContainer";

//玩家球员数据
message FootballerData{
	required int32 roleType = 1;//角色ID，同footballerData的roleType
	required int32 awakenState = 2;//球员觉醒状态，0~2依次表示原始状态、一觉、二觉
	required int32 level = 3;//球员当前等级
	required int32 exp = 4;//球员当前等级的经验
	required int32 star = 5;//球员当前星级
	required int32 quality = 6;//球员当前品阶
	required double power = 7;//球员当前力量总值
	required double technic = 8;//球员当前技巧总值
	required double vitality = 9;//球员当前体能总值
	required double speed = 10;//球员当前速度总值
	required int32 active = 11;//球员在球队中状态，0-未激活（还是为碎片形式），1为已激活球员
	required int32 fragment = 12;//拥有当前球员的碎片数量
	required int32 mainSkillLev = 13;//队长技能当前等级
	repeated int32 skillLevel = 14;//技能1~4总4个字段，依次记录当前等级，-1为未解锁，0为已解锁未加点
	required int32 combat = 15;//球员当前战斗力
}

//角色信息
message UserInfo{
	required int64 userid = 1;//
	required int32 accountid = 2;//
	required string nickname = 3;//
	required string face = 4;//
	required int32 exp = 5;//
	required int32 level = 6;//
	required int32 vip = 7;//
	required int32 diamond = 8;//
	required int32 gold = 9;//
	required int32 st = 10;//
	required int32 bp = 11;//
	required int32 commonfragment = 12;//
	required int32 unionid = 13;//
	required int32 unionposition = 14;//
	required int32 chiefcoach = 15;//
	required int32 asscoach = 16;//
	required int32 chiefscout = 17;//
	required int32 assscout = 18;//
	required int32 chiefsponsor = 19;//
	required int32 asssponsor = 20;//
}

//球员阵容操作
message LineupAction{
	required int32 op = 1;//操作：0上阵、1下阵、2设置队长、3设置默认阵容
	required int32 lineupId = 2;//阵容的id
	required int32 roleType = 3;//角色ID，同footballerData的roleType
}

//阵容
message TLineup{
	required int32 lineupId = 1;//1~5，分别对应玩家第一~第五套阵容数据
	required int32 ace = 2;//记录队长的当前位置，为1~11其中一个，不能为空
	repeated int32 position = 3;//角色ID，同footballerData的roleType
}

//物品
message BackpackItem{
	required int32 itemId = 1;//物品id，见 item 配置表
	required int32 itemNum = 2;//物品数量
}

//邮件
message TMail{
	required int32 id = 1;//邮件id
	required int64 userid = 2;//玩家id
	required int64 sender = 3;//发送玩家id
	required string titile = 4;//邮箱标题
	required int32 status = 5;//邮件状态，0 未领取、1已领取
	required string items = 6;//附件，type|id|num，类型|id|数量
	required int64 time = 7;//时间
}

